<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linear_prog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminate="true"
        app:indicatorColor="@color/Splace_bg"
        android:visibility="invisible"
        />
    <ImageView
        android:id="@+id/home_logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/homelogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="300dp"
        />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_sora"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/home_logo_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:fontFamily= "@font/poppinsbold"
        />

    <TextView
        android:id="@+id/log_in_con_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Id_dil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/log_in_con_tv"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@color/white"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_faild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColorHint="@color/gray"
            android:inputType="number"
            android:textStyle="bold"
            android:textSize="16sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Id_dil"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="16dp"
        android:backgroundTint="@color/bottonColor"
        app:cornerRadius="5dp"
        android:text="@string/sign_in"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsbold"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/create_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/don_t_have_account_click"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppinsbold"
        android:layout_marginStart="-48dp"
        />
    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Login_btn"
        app:layout_constraintStart_toEndOf="@id/create_tv"
        android:layout_marginStart="4dp"
        android:text="@string/register"
        android:textSize="12sp"
        android:textColor="@color/Splace_bg"
        android:fontFamily="@font/poppinsbold"
        />
</androidx.constraintlayout.widget.ConstraintLayout>