<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/top_view"
        android:layout_width="300dp"
        android:layout_height="4dp"
        android:background="@color/Splace_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:circularflow_defaultRadius="20dp"
        />
    <TextView
        android:id="@+id/user_fragment_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_view"
        android:layout_marginTop="8dp"
        tools:text="@string/phone_number"
        />

    <LinearLayout
        android:id="@+id/dialog_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        >
        <ImageView
            android:id="@+id/camera_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/camera"
            android:adjustViewBounds="true"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:id="@+id/camera_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:fontFamily="@font/poppinsbold"
            android:layout_marginTop="100dp"
            android:layout_marginStart="-80dp"
            />
        <ImageView
            android:id="@+id/gallery_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/gallery"
            android:adjustViewBounds="true"
            android:layout_marginStart="140dp"
            />
        <TextView
            android:id="@+id/gallrey_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:fontFamily="@font/poppinsbold"
            android:layout_marginTop="100dp"
            android:layout_marginStart="-80dp"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@+id/dialog_container"
        android:layout_marginTop="20dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selected_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/upload"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsbold"
        android:backgroundTint="@color/bottonColor"

        />
</androidx.constraintlayout.widget.ConstraintLayout>